[project]
name = "herbert-lora-sentiment-analysis-api-docker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.2.0",
    "evaluate>=0.4.6",
    "fastapi>=0.119.0",
    "peft>=0.17.1",
    "protobuf>=6.33.0",
    "sacremoses>=0.1.1",
    "scikit-learn>=1.7.2",
    "slowapi>=0.1.9",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "uvicorn>=0.37.0",
]
